--- a/Bullseye/Base.lproj/Main.storyboard
+++ b/Bullseye/Base.lproj/Main.storyboard
@@ -102,6 +102,8 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="roundsLabel" destination="IcR-3f-9hW" id="LhV-bd-ej1"/>
+                        <outlet property="scoreLabel" destination="fcw-bJ-Mm2" id="hF8-5O-XMc"/>
                         <outlet property="slider" destination="AYu-Hl-6Si" id="bRo-xc-r5F"/>
                         <outlet property="targetLabel" destination="4EE-WJ-gUa" id="DcO-Wj-G0u"/>
                     </connections>
